@@ -1,0 +1,55 @@
+=================================
+    Test of specmat routines
+=================================
+b1 = [0 1 1 0 1 1 0]
+b2 = [0 0 0 0 0 1 0 0 1 1 1 1 1]
+toeplitz(b1, b2) =
+[[0 0 0 0 0 1 0 0 1 1 1 1 1]
+ [1 0 0 0 0 0 1 0 0 1 1 1 1]
+ [1 1 0 0 0 0 0 1 0 0 1 1 1]
+ [0 1 1 0 0 0 0 0 1 0 0 1 1]
+ [1 0 1 1 0 0 0 0 0 1 0 0 1]
+ [1 1 0 1 1 0 0 0 0 0 1 0 0]
+ [0 1 1 0 1 1 0 0 0 0 0 1 0]]
+toeplitz(b1) =
+[[0 1 1 0 1 1 0]
+ [1 0 1 1 0 1 1]
+ [1 1 0 1 1 0 1]
+ [0 1 1 0 1 1 0]
+ [1 0 1 1 0 1 1]
+ [1 1 0 1 1 0 1]
+ [0 1 1 0 1 1 0]]
+
+v1 = [-0.049 -0.236 -0.269 -1.538 1.679]
+v2 = [1.021 1.255 1.000 -1.125 0.369 0.612 -0.080]
+toeplitz(v1, v2) =
+[[-0.049 1.255 1.000 -1.125 0.369 0.612 -0.080]
+ [-0.236 -0.049 1.255 1.000 -1.125 0.369 0.612]
+ [-0.269 -0.236 -0.049 1.255 1.000 -1.125 0.369]
+ [-1.538 -0.269 -0.236 -0.049 1.255 1.000 -1.125]
+ [1.679 -1.538 -0.269 -0.236 -0.049 1.255 1.000]]
+toeplitz(v1) =
+[[-0.049 -0.236 -0.269 -1.538 1.679]
+ [-0.236 -0.049 -0.236 -0.269 -1.538]
+ [-0.269 -0.236 -0.049 -0.236 -0.269]
+ [-1.538 -0.269 -0.236 -0.049 -0.236]
+ [1.679 -1.538 -0.269 -0.236 -0.049]]
+
+c1 = [-0.072+0.728i -0.975-0.378i 1.072-0.082i 0.841-0.075i]
+c2 = [0.073-0.609i -0.297+0.211i -0.203+0.104i]
+toeplitz(c1, c2) =
+[[-0.072+0.728i -0.297+0.211i -0.203+0.104i]
+ [-0.975-0.378i -0.072+0.728i -0.297+0.211i]
+ [1.072-0.082i -0.975-0.378i -0.072+0.728i]
+ [0.841-0.075i 1.072-0.082i -0.975-0.378i]]
+toeplitz(c1, c1) =
+[[-0.072+0.728i -0.975-0.378i 1.072-0.082i 0.841-0.075i]
+ [-0.975-0.378i -0.072+0.728i -0.975-0.378i 1.072-0.082i]
+ [1.072-0.082i -0.975-0.378i -0.072+0.728i -0.975-0.378i]
+ [0.841-0.075i 1.072-0.082i -0.975-0.378i -0.072+0.728i]]
+toeplitz(c1) =
+[[-0.072+0.728i -0.975-0.378i 1.072-0.082i 0.841-0.075i]
+ [-0.975+0.378i -0.072+0.728i -0.975-0.378i 1.072-0.082i]
+ [1.072+0.082i -0.975+0.378i -0.072+0.728i -0.975-0.378i]
+ [0.841+0.075i 1.072+0.082i -0.975+0.378i -0.072+0.728i]]
+
